_includes/assets/css/inline.css
/* ... */
select#session_type::-ms-expand {
    display: none;
}
select#session_type:hover {
    border-color: #888;
}
select#session_type:focus {
    border-color: #aaa;
    box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
    box-shadow: 0 0 0 3px -moz-mac-focusring;
    color: #222; 
    outline: none;
}
select#session_type option {
    font-weight:normal;
}

/* calendar styles */
div.healcode .ui-widget-header {
	border: none;
	background: none;
}
.pre-filters div:nth-child(2) {
	display:none;
}
div.healcode .ui-widget-content {
	background: none;
	padding: 1rem;
	margin-bottom: 1rem;
}
div.healcode .ui-corner-all {
	border-radius: none;
	border-bottom-right-radius: none;
}

.ui-datepicker th, .ui-datepicker td, .ui-datepicker-title {
	font-family: var(--sans-serif);
}
.ui-datepicker-title {
	color: var(--dark-gray);
}
.ui-datepicker th, .ui-datepicker td { 
	color: var(--html-gray);
}
.ui-datepicker-inline {
	width: 100%;
}
div.healcode .ui-state-default, div.healcode .ui-widget-content .ui-state-default, div.healcode .ui-widget-header .ui-state-default {
	background: none;
	background-color: var(--light-gray);
}

/* sessions to choose */
h1.healcode-date-label {
	font-family: var(--sans-serif);
	/* make this mirror an h2 */
	color: var(--cool-blue-3);
	/* opacity: 0.6; */
	font-size: calc( var(--h1-size-min) * 1em);
}
.trainer-label {
	display:none;
}
.appointment-date-block {
	margin-bottom: 2rem;
	border-bottom: 1px solid var(--aaa-gray);
	padding: 1rem 0;
}
.appointment-date-block:nth-child(1) {
	border-top: 1px solid var(--aaa-gray);
	margin-top: 3rem;
}

/* select buttons and stuff */
a.hc-button {
	padding: 8px 20px !important;
}
.hc_footer {
	display:none;
}


/*------------------------------------*\
    $POSTS
\*------------------------------------*/

/* Posts List */
article {
	margin-bottom: 1em;
	padding-bottom: 1em;
	/* border-bottom: 1px solid #eee;
	border-bottom: 1px solid var(--white); */
}
article p img {
	max-width: 100%;
}

@media screen and (max-width: 48rem) {
	article {
		padding: 1rem;
		margin: 0 auto;
	}
}

main > section > article > * {
	margin-top: 0;
	margin-bottom: .5em;
}
main > section > article > h1 > a {
	line-height: 1.6;
}
main > nav {
	max-width: 48rem;
	margin: auto;
}
main > nav > a {
	font-size: 160%;
}

/* Post Tags */
a[rel="tag"],
a[rel="tag"]:visited {
	display: inline-block;
  vertical-align: text-top;
  text-transform: uppercase;
	letter-spacing: .1em;
  font-size: .625em;
  padding: 0 .5em;
	line-height: 2em;
	height: 2em;
  border: 1px solid var(--white);
	background-color: var(--white);
	color: var(--blue);
  border-radius: .25em;
  text-decoration: none;
	margin: 0 .5em .5em 0;
}

a[rel="tag"]:hover {
	border: 1px solid var(--blue);
	background-color: var(--blue);
	color: var(--white);
}

a[rel="tag"]:last-child {
	margin-right: 0;
}

/* @media screen and (min-width:768px) {
	:root {
		font-size: 1.1rem;
	}
} */

